--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --watch ./test/**/* --watch ./src/**/* --exec \"node ./src/index.js\""
+    "dev": "nodemon --watch ./test/**/* --watch ./src/**/* --exec \"node ./test/get.js\""
   },
   "keywords": [],
   "author": "",
